WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173348
[GStreamer] Align GstBus signal watch priorities with RunLoop dispatches
https://bugs.webkit.org/show_bug.cgi?id=173348
Summary
[GStreamer] Align GstBus signal watch priorities with RunLoop dispatches
Zan Dobersek
Reported
2017-06-13 23:37:16 PDT
[GStreamer] Align GstBus signal watch priorities with RunLoop dispatches
Attachments
Patch
(5.03 KB, patch)
2017-06-13 23:47 PDT
,
Zan Dobersek
cgarcia
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2017-06-13 23:47:42 PDT
Created
attachment 312865
[details]
Patch
Carlos Garcia Campos
Comment 2
2017-06-14 00:00:20 PDT
Comment on
attachment 312865
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=312865&action=review
> Source/WebCore/ChangeLog:16 > +matching dispatches of callbacks scheduled via RunLoop::dispatch().
Did you forget to remove this line?
Zan Dobersek
Comment 3
2017-06-14 00:22:49 PDT
Comment on
attachment 312865
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=312865&action=review
>> Source/WebCore/ChangeLog:16 >> +matching dispatches of callbacks scheduled via RunLoop::dispatch(). > > Did you forget to remove this line?
Yes.
Zan Dobersek
Comment 4
2017-06-14 01:56:52 PDT
Committed
r218248
: <
http://trac.webkit.org/changeset/218248
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug