[GStreamer] Align GstBus signal watch priorities with RunLoop dispatches https://bugs.webkit.org/show_bug.cgi?id=173348

Reviewed by Carlos Garcia Campos.

When adding GstBus signal watches, use the gst_bus_add_signal_watch_full()
function to also specify the GLib priority that's used for the underlying
GSource object.

RunLoopSourcePriority::RunLoopDispatcher should be a good priority value
to use here, matching the RunLoop::dispatch() priority that's e.g. used
in the MainThreadNotifier class.

* platform/audio/gstreamer/AudioDestinationGStreamer.cpp:
(WebCore::AudioDestinationGStreamer::AudioDestinationGStreamer):
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::createGSTPlayBin):
* platform/graphics/gstreamer/mse/AppendPipeline.cpp:
(WebCore::AppendPipeline::AppendPipeline):


Canonical link: https://commits.webkit.org/190224@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218248 268f45cc-cd09-0410-ab3c-d52691b4dbfc